--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,11 @@ ul{ list-style: none; padding: 0;}
 
 html{
     font-size: 15px;
+    --red:#ca3c3c;
+    --ff: proxima, sans-serif;
 }
 body{
-    font: 16px/1.2 proxima, sans-serif;
+    font: 16px/1.2 var(--ff);
 }
 
 .container{
@@ -43,7 +45,7 @@ body{
 }
 
 [class^="col-"]{ flex: 1 0 auto; padding: 0 1rem;}
-.col-1{ flex-basis: 8.33%; max-width: 8.33%;}                   /* calc(1/12 * 100%) */
+.col-1{ flex-basis: 8.33%; max-width: 8.33%;}                   
 .col-2{ flex-basis: 16.66%; max-width: 16.66%;}
 .col-3{ flex-basis: 25%; max-width: 25%;}
 .col-4{ flex-basis: 33.33%; max-width: 33.33%;}
@@ -55,8 +57,30 @@ body{
 .col-10{ flex-basis: 83.33%; max-width: 83.33%;}
 .col-11{ flex-basis: 91.66%; max-width: 91.66%;}
 .col-12{ flex-basis: 100%; max-width: 100%;}
+.flex{ display: flex;}
+.justify-space-bet{ justify-content: space-between; }
+.align-center{ align-items: center;}
+
+/* custom css */
+
+header{ background: #000; color: #fff;}
+header h1{font-size: 30px}
+header h1 a{ color: inherit; display: inline-block; line-height: 80px;}
+nav{ margin-left: -20px;}
+nav li{ margin: 0 5px;}
+nav a{ display: block; line-height: 80px; color: inherit; padding: 0 15px;}
+.btn{ background: none; border: 2px solid; color: var(--red); width: 90px; height: 35px; border-radius: 10px; font: 16px var(--ff);}
+.menu{ display: none; position: absolute; right: 1rem; top: 20px;}
+.menu span{ display: block; height: 2px; background: var(--red); margin: 6px 10px;}
 
 
+.banner{ background: #666; color: #fff; padding: 200px 0;}
+.banner button{ background: none; border: none; color: inherit; font-size: 10rem; margin-right: 40px;}
+.banner p{ font-size: 60px; font-weight: 100;}
+.banner a{ color: var(--red);}
+
+
+/* responsive s*/
 @media screen and (max-width:1220px){
    html{ font-size: 13px; }
 }
@@ -73,9 +97,13 @@ body{
     .col-t-10{ flex-basis: 83.33%; max-width: 83.33%;}
     .col-t-11{ flex-basis: 91.66%; max-width: 91.66%;}
     .col-t-12{ flex-basis: 100%; max-width: 100%;}
+    .banner p{ font-size: 36px;}
 }
 @media screen and (max-width:767px){
     html{ font-size: 12px;}
+    .col-m-6{ flex-basis: 50%; max-width: 50%;}
+    .collapse{ display: none;}
+    .menu{ display: inline-block; }
 }
 @media screen and (max-width:460px){
     .col-p-1{ flex-basis: 8.33%; max-width: 8.33%;}
@@ -90,4 +118,5 @@ body{
     .col-p-10{ flex-basis: 83.33%; max-width: 83.33%;}
     .col-p-11{ flex-basis: 91.66%; max-width: 91.66%;}
     .col-p-12{ flex-basis: 100%; max-width: 100%;}
+    .banner .flex{ flex-flow: column wrap;}
 }
