--- a/css/style.css
+++ b/css/style.css
@@ -93,12 +93,38 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
 .wrap-5{ background: #ebebeb; color: #363636; padding: 100px 0 140px;}
 .wrap-5 .btn{ margin: 0 10px 4rem 0;}
 .btn.active{ background: var(--red); color: #fff; border-color: var(--red);}
-.work{ position: relative; margin-bottom: 2rem;}
-.work figcaption{ position: absolute; background: #fff; bottom: 0; left: 0; right: 0; text-align: center; padding: 20px 0; display: none; }
+.work{ position: relative; margin-bottom: 2rem; overflow: hidden;}
+.work figcaption{ position: absolute; background: #fff; bottom: -50px; left: 0; right: 0; text-align: center; padding: 20px 0; opacity: 0; transition: .4s; }
 .work h3{ color: var(--red); font-size: 18px; line-height: 40px;}
 .work p{ color: #898989; font: 100 14px/20px var(--ff) ;}
 .work img{ max-width: 100%; height: auto;}
-.work:hover figcaption{ display: block;}
+.work:hover figcaption{ opacity: 1; bottom: 0; }
+.seemore{ border: none; background: none; color: var(--red); font-size: 36px; }
+
+
+
+.wrap-6{ background: #666; color: #fff; padding: 4rem 0 2rem; }
+.reviews{ text-align: center; }
+.reviews blockquote q{ font-size: 36px; line-height: 41px; font-weight: 100; }
+.reviews img{ margin: 15px 0 10px; }
+.reviews b{ display: block; }
+.reviews .review{ display: none; }
+.reviews .review.active{ display: block }
+.pager{ list-style: none; padding: 0; justify-content: center; margin: 2rem 0;}
+.pager li{ margin: 0 5px;}
+.pager a{ display: block; width: 10px; height: 10px; border: 2px solid #fff; border-radius:50%;}
+.pager a.active{ background: #fff;}
+
+
+.wrap-7{ background: #fff; color: #363636; padding: 100px 0 140px;}
+.team{ position: relative; }
+.social{ position: absolute; left: 140px; top: 60px;}
+.social li{ margin-right: 10px;}
+.social a{ display: block; background: var(--red); color: #fff; width: 50px; border-radius: 50%; aspect-ratio: 1/1; display: grid; place-items: center; font-size: 24px;}
+.gap{ margin: 50px 0 40px 100px;}
+.gap h3{ color: var(--red); font-size: 18px; margin-bottom: 1rem;}
+.gap small{ font-weight: 100; font-size: 14px; color: #898989;}
+.gap p{ font-size: 14px; font-weight: 100; color: #363636; line-height: 22px; margin-top: 2rem;}
 
 
 /* responsive s*/
@@ -120,12 +146,18 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
     .col-t-11{ flex-basis: 91.66%; max-width: 91.66%;}
     .col-t-12{ flex-basis: 100%; max-width: 100%;}
     .banner p{ font-size: 36px;}
+    .gap{ margin-left: 50px;}
+    .social{right: 0; left: auto; top: 0;}
+    .social ul{flex-flow: column wrap;}
+    .social li{ margin: 0 0 10px 0; }
 }
 @media screen and (max-width:767px){
     html{ font-size: 12px;}
     .col-m-6{ flex-basis: 50%; max-width: 50%;}
+    .col-m-12{ flex-basis: 100%; max-width: 100%;}
     .collapse{ display: none;}
-    .menu{ display: inline-block; }
+    .menu{ display: inline-block;}
+    .wrap-5 .btn{ margin-right: 5px;}
 }
 @media screen and (max-width:460px){
     .col-p-1{ flex-basis: 8.33%; max-width: 8.33%;}
