--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ img{ vertical-align: bottom;}
 button{ padding: 0; cursor: pointer;}
 :disabled{ cursor:not-allowed;}
 ul{ list-style: none; padding: 0;}
+video{ border: none; width: 100%; height: auto; opacity: 0;}
 
 @font-face {
     font-family: proxima;
@@ -73,12 +74,20 @@ nav a{ display: block; line-height: 80px; color: inherit; padding: 0 15px;}
 .btn{ background: none; border: 2px solid; color: var(--red); width: 90px; height: 35px; border-radius: 10px; font: 16px var(--ff);}
 .menu{ display: none; position: absolute; right: 1rem; top: 20px;}
 .menu span{ display: block; height: 2px; background: var(--red); margin: 6px 10px;}
+.btn span{ transform-origin: right center; transition: 0.4s;}
+.btn.active span:nth-child(1){transform: rotate(-14deg); }
+.btn.active span:nth-child(2){ opacity: 0; }
+.btn.active span:nth-child(3){transform: rotate(14deg); }
 
 
-.banner{ background: #666; color: #fff; padding: 200px 0;}
+
+.banner{ background: #666; color: #fff; padding: 1rem 0; }
+.banner .container{ position: relative;}
 .banner button{ background: none; border: none; color: inherit; font-size: 10rem; margin-right: 40px;}
 .banner p{ font-size: 60px; font-weight: 100;}
 .banner a{ color: var(--red);}
+.banner .video-text{ position: absolute; inset: 1rem; }
+.video .flex{ height: 100%;}
 
 
 .wrap-3{ background: var(--red); color: #fff; padding: 50px 0;}
@@ -94,7 +103,7 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
 
 .wrap-5{ background: #ebebeb; color: #363636; padding: 100px 0 140px;}
 .wrap-5 .btn{ margin: 0 10px 4rem 0;}
-.btn.active{ background: var(--red); color: #fff; border-color: var(--red);}
+.wrap-5 .btn.active{ background: var(--red); color: #fff; border-color: var(--red);}
 .work{ position: relative; margin-bottom: 2rem; overflow: hidden;}
 .work figcaption{ position: absolute; background: #fff; bottom: -50px; left: 0; right: 0; text-align: center; padding: 20px 0; opacity: 0; transition: .4s; }
 .work h3{ color: var(--red); font-size: 18px; line-height: 40px;}
@@ -172,7 +181,7 @@ canvas:empty{ background: #ddd;}
 
 
 .wrap-13{background: #252525; color: #fff;  text-align: center; padding: 50px 0;}
-
+.top{ background: none; border: none; color: var(--red); font-size: 24px; }
 
 /* responsive s*/
 @media screen and (max-width:1220px){
@@ -204,9 +213,12 @@ canvas:empty{ background: #ddd;}
     html{ font-size: 12px;}
     .col-m-6{ flex-basis: 50%; max-width: 50%;}
     .col-m-12{ flex-basis: 100%; max-width: 100%;}
-    .collapse{ display: none;}
     .menu{ display: inline-block;}
     .wrap-5 .btn{ margin-right: 5px;}
+    .collapse{ display: none; padding-bottom: 1rem; position: absolute; top: 80px; left: 0; right: 0; background: #000;} 
+    .collapse nav ul{ flex-flow: column wrap; width: 100%;}
+    .collapse .flex{ flex-flow: column wrap; text-align: right; align-items: end;}
+    .collapse nav a{ line-height: 40px;}
 }
 @media screen and (max-width:460px){
     .col-p-1{ flex-basis: 8.33%; max-width: 8.33%;}
@@ -221,8 +233,10 @@ canvas:empty{ background: #ddd;}
     .col-p-10{ flex-basis: 83.33%; max-width: 83.33%;}
     .col-p-11{ flex-basis: 91.66%; max-width: 91.66%;}
     .col-p-12{ flex-basis: 100%; max-width: 100%;}
-    .banner .flex{ flex-flow: column wrap;}
+    /* .banner .flex{ flex-flow: column wrap;} */
     .grid{ grid-template-columns: repeat(1, 1fr);}
     .wrap-10 input{ width: 240px; font-size: 24px;}
     .col-p-auto{ flex-basis: 50%; max-width: 100%; }
+    .wrap-8 p{font-size: 60px;}
+    .banner p{ font-size: 20px;}
 }
