--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ button{ padding: 0; cursor: pointer;}
 :disabled{ cursor:not-allowed;}
 ul{ list-style: none; padding: 0;}
 video{ border: none; width: 100%; height: auto; opacity: 0;}
+label{ display: block;}
 
 @font-face {
     font-family: proxima;
@@ -116,14 +117,17 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
 .wrap-6{ background: #666; color: #fff; padding: 4rem 0 2rem; }
 .reviews{ text-align: center; }
 .reviews blockquote q{ font-size: 36px; line-height: 41px; font-weight: 100; }
-.reviews img{ margin: 15px 0 10px; }
 .reviews b{ display: block; }
-.reviews .review{ display: none; }
+/* .reviews .review{ display: none; }
 .reviews .review.active{ display: block }
 .pager{ list-style: none; padding: 0; justify-content: center; margin: 2rem 0;}
 .pager li{ margin: 0 5px;}
 .pager a{ display: block; width: 10px; height: 10px; border: 2px solid #fff; border-radius:50%;}
-.pager a.active{ background: #fff;}
+.pager a.active{ background: #fff;} */
+.wrap-6 .bx-wrapper{ background: none; box-shadow: 0 0; border: none; }
+.wrap-6 .bx-wrapper img{ margin: 15px auto 10px; }
+.wrap-6 .bx-wrapper .bx-pager.bx-default-pager a{ border: 2px solid #fff;}
+.wrap-6 .bx-wrapper .bx-pager.bx-default-pager a.active,.wrap-6 .bx-wrapper .bx-pager.bx-default-pager a:hover{ background: #fff;}
 
 
 .wrap-7{ background: #fff; color: #363636; padding: 100px 0 140px;}
@@ -135,6 +139,7 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
 .gap h3{ color: var(--red); font-size: 18px; margin-bottom: 1rem;}
 .gap small{ font-weight: 100; font-size: 14px; color: #898989;}
 .gap p{ font-size: 14px; font-weight: 100; color: #363636; line-height: 22px; margin-top: 2rem;}
+.wrap-7 .col-4:nth-child(4),.wrap-7 .col-4:nth-child(5),.wrap-7 .col-4:nth-child(6){ display: none;}
 
 
 
@@ -171,7 +176,7 @@ canvas:empty{ background: #ddd;}
 .wrap-12 address{  color: #898989; line-height: 30px; font-weight: 100; font-style: normal; }
 .social2{ margin: 2rem 0; }
 .social2 a{ color: var(--red); margin-right: 20px;}
-.wrap-12 label{ display: block; border: 2px solid; padding: 17px; margin: 1rem 0;}
+.wrap-12 label{ border: 2px solid; padding: 17px; margin: 1rem 0;}
 .wrap-12 input{ border: none; background: none;}
 .wrap-12 textarea{ border: none; background: none; vertical-align: top; resize: none; height: 42px;}
 .wrap-12 button{ display: block; margin: 1rem 0; width: 100%; background: #fff; color: var(--red); border: none; height: 80px; border-radius: 10px;}
@@ -182,6 +187,14 @@ canvas:empty{ background: #ddd;}
 
 .wrap-13{background: #252525; color: #fff;  text-align: center; padding: 50px 0;}
 .top{ background: none; border: none; color: var(--red); font-size: 24px; }
+.mb{ margin: 10px 0;}
+.popupform{ display: none;}
+.overlay{ position: fixed; inset: 0; background: #000b; z-index: 2;}
+.popup{ position: fixed; left: 50%; transform: translateX(-50%); top: 100px; background: #fff; border-radius: 5px; padding: 2rem; z-index: 3; }
+.popup input{ float: right; margin-left: 1rem; border: 1px solid #000; padding: 5px;}
+.popup label{ margin: 1rem 0;}
+.popup .cross{ position: absolute; right: 10px; top: 10px; border: none; background: none; color: var(--red); font-size: 20px; }
+
 
 /* responsive s*/
 @media screen and (max-width:1220px){
