--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,8 @@ nav a{ display: block; line-height: 80px; color: inherit; padding: 0 15px;}
 .btn span{ transform-origin: right center; transition: 0.4s;}
 .btn.active span:nth-child(1){transform: rotate(-14deg); }
 .btn.active span:nth-child(2){ opacity: 0; }
-.btn.active span:nth-child(3){transform: rotate(14deg); }
+.btn.active span:nth-child(3){transform: rotate(14deg);}
+header .btn{ color: #ff6e6e; }
 
 
 
@@ -86,7 +87,7 @@ nav a{ display: block; line-height: 80px; color: inherit; padding: 0 15px;}
 .banner .container{ position: relative;}
 .banner button{ background: none; border: none; color: inherit; font-size: 10rem; margin-right: 40px;}
 .banner p{ font-size: 60px; font-weight: 100;}
-.banner a{ color: var(--red);}
+.banner a{ color: #fff}
 .banner .video-text{ position: absolute; inset: 1rem; }
 .video .flex{ height: 100%;}
 
@@ -103,7 +104,7 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
 
 
 .wrap-5{ background: #ebebeb; color: #363636; padding: 100px 0 140px;}
-.wrap-5 .btn{ margin: 0 10px 4rem 0;}
+.wrap-5 .btn{ margin: 0 10px 4rem 0; color: #c21f1f;}
 .wrap-5 .btn.active{ background: var(--red); color: #fff; border-color: var(--red);}
 .work{ position: relative; margin-bottom: 2rem; overflow: hidden;}
 .work figcaption{ position: absolute; background: #fff; bottom: -50px; left: 0; right: 0; text-align: center; padding: 20px 0; opacity: 0; transition: .4s; }
@@ -118,15 +119,9 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
 .reviews{ text-align: center; }
 .reviews blockquote q{ font-size: 36px; line-height: 41px; font-weight: 100; }
 .reviews b{ display: block; }
-/* .reviews .review{ display: none; }
-.reviews .review.active{ display: block }
-.pager{ list-style: none; padding: 0; justify-content: center; margin: 2rem 0;}
-.pager li{ margin: 0 5px;}
-.pager a{ display: block; width: 10px; height: 10px; border: 2px solid #fff; border-radius:50%;}
-.pager a.active{ background: #fff;} */
 .wrap-6 .bx-wrapper{ background: none; box-shadow: 0 0; border: none; }
 .wrap-6 .bx-wrapper img{ margin: 15px auto 10px; }
-.wrap-6 .bx-wrapper .bx-pager.bx-default-pager a{ border: 2px solid #fff;}
+.wrap-6 .bx-wrapper .bx-pager.bx-default-pager a{ border: 2px solid #fff; margin: 0 10px;}
 .wrap-6 .bx-wrapper .bx-pager.bx-default-pager a.active,.wrap-6 .bx-wrapper .bx-pager.bx-default-pager a:hover{ background: #fff;}
 
 
@@ -137,7 +132,7 @@ h2{ font-size: 72px; border-bottom: 10px solid; line-height: 60px; margin-bottom
 .social a{ display: block; background: var(--red); color: #fff; width: 50px; border-radius: 50%; aspect-ratio: 1/1; display: grid; place-items: center; font-size: 24px;}
 .gap{ margin: 50px 0 40px 100px;}
 .gap h3{ color: var(--red); font-size: 18px; margin-bottom: 1rem;}
-.gap small{ font-weight: 100; font-size: 14px; color: #898989;}
+.gap small{ font-weight: 100; font-size: 14px; color: #666;}
 .gap p{ font-size: 14px; font-weight: 100; color: #363636; line-height: 22px; margin-top: 2rem;}
 .wrap-7 .col-4:nth-child(4),.wrap-7 .col-4:nth-child(5),.wrap-7 .col-4:nth-child(6){ display: none;}
 
@@ -154,7 +149,7 @@ canvas{ margin-top: 50px; max-width: 100%; height: auto;}
 canvas:empty{ background: #ddd;}
 .accordion{ margin-top: 50px; }
 .accordion li{ margin-bottom: 10px;}
-.accordion a{ display: block; border: 1px solid #ebebeb; padding: 18px; color: #898989; border-radius: 10px;}
+.accordion a{ display: block; border: 1px solid #ebebeb; padding: 18px; color: #666; border-radius: 10px;}
 .accordion span.fa{ margin-right: 20px;}
 .accordion p{ display: none; color: #363636; font-size: 14px; font-weight: 100; line-height: 22px; margin: 20px; }
 .accordion li:first-child p{ display: block;}
@@ -169,11 +164,11 @@ canvas:empty{ background: #ddd;}
 .wrap-10 button{ background: #fff;}
 
 .wrap-11{ background: #7f7f7f; padding: 28px 0 0 0;}
-.box{ background: #a6a6a6; color: #fff; line-height: 95px; text-align: center; margin-bottom: 27px; }
+.box{ background: #555; color: #fff; line-height: 95px; text-align: center; margin-bottom: 27px; }
 
 
 .wrap-12{ background: #ebebeb; color: #363636; padding: 100px 0;}
-.wrap-12 address{  color: #898989; line-height: 30px; font-weight: 100; font-style: normal; }
+.wrap-12 address{  color: #666; line-height: 30px; font-weight: 100; font-style: normal; }
 .social2{ margin: 2rem 0; }
 .social2 a{ color: var(--red); margin-right: 20px;}
 .wrap-12 label{ border: 2px solid; padding: 17px; margin: 1rem 0;}
@@ -252,4 +247,5 @@ canvas:empty{ background: #ddd;}
     .col-p-auto{ flex-basis: 50%; max-width: 100%; }
     .wrap-8 p{font-size: 60px;}
     .banner p{ font-size: 20px;}
+    
 }
